--- a/src/app.css
+++ b/src/app.css
@@ -1,122 +1,133 @@
-body{
+* {
+    box-sizing: border-box;
+}
+
+body {
     margin: 0;
     padding: 0;
-    min-height: 100vh;
     background: #333;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-family: 'Poppins', sans-serif;
+    max-height: 100%;
+    max-width: 100%;
 }
-.app {
+
+.pokemon-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin: 100px 0px;
-
+    margin-bottom: 55px;
 }
+
 .cant {
     font-weight: bold;
     font-size: 20px;
 }
+
 .all-types {
+    margin-top: 1rem;
     display: flex;
+    color: white;
 }
- .num{
-     color: rgba(255, 255, 255, 0.658);
-     font-weight: bold;
-     font-size: 1.5em;
-     position:absolute;
-     margin-top:-110px ;
-     margin-left: 210px;
-     
- }
- .types-esp {
-     background-color: rgba(240, 248, 255, 0.171);
-     border-radius: 10px;
-     padding: 0 8px;
-     margin: 0 5px;
- }
- 
- .stat {
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
-     margin: 0px 20px 0 20px;
-     width: 60px;
- }
- .stat-xp {
+
+.num {
+    color: rgba(255, 255, 255, 0.658);
+    font-weight: bold;
+    font-size: 1.5em;
+    position: absolute;
+    margin-top: -110px;
+    margin-left: 210px;
+
+}
+
+.types-esp {
+    background-color: rgba(240, 248, 255, 0.171);
+    border-radius: 10px;
+    padding: 0 8px;
+    margin: 0 5px;
+}
+
+.stat {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0px 20px 0 20px;
+    width: 60px;
+}
+
+.stat-xp {
 
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: -8px;
     margin-bottom: 28px;
- }
- .stats-column {
-     display: flex;
-     flex-direction: row;
-     justify-content: space-between;
-     /* margin-left: -10px; */
- }
- .stat-tittle {
-     font-weight: bold;
-     font-size: 1.2em;
-    
- } 
+}
 
- .type {
-     position: absolute;
-     text-align: center;
-     margin-top: 150px;
-     color: rgb(255, 255, 255);
-     
+.stats-column {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* margin-left: -10px; */
+}
 
- }
- 
- .xp{
-     font-size: 35px;
-     font-weight: bold;
- }
+.stat-tittle {
+    font-weight: bold;
+    font-size: 1.2em;
+
+}
+
+.type {
+    position: absolute;
+    text-align: center;
+    margin-top: 150px;
+    color: rgb(255, 255, 255);
 
 
- 
+}
 
-.content{
+.xp {
+    font-size: 35px;
+    font-weight: bold;
+}
+
+
+.content {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.card:hover .type{
+.card:hover .type {
     color: #fff;
 }
-.container{
+
+.container {
     position: relative;
     display: flex;
     justify-content: space-between;
 }
 
-.container .card{
+.container .card {
     position: relative;
     cursor: pointer;
     margin: 0 9px;
-  
-    
+
+
 }
 
-.container .card .face{
+.container .card .face {
     width: 300px;
     height: 200px;
     transition: 0.5s;
-   
+
 }
 
-.container .card .face.face1{
+
+.container .card .face.face1 {
     position: relative;
     background-color: #0084ff;
     display: flex;
@@ -124,45 +135,53 @@ body{
     align-items: center;
     z-index: 1;
     transform: translateY(100px);
-    border-radius: 10px; 
+    border-radius: 10px;
 }
-.container .card:hover .face.face1 .num{
+
+.face1 {
+    flex-direction: column;
+}
+
+.container .card:hover .face.face1 .num {
     color: #fff;
 }
-.face1-img{
+
+.face1-img {
     width: 10%;
-    left:10px;
-    margin-top:-150px;
+    left: 10px;
+    margin-top: -150px;
     position: absolute;
-   
+
     z-index: 0;
-    display:none;
+    display: none;
     transition: 1s;
-    
+
 
 }
 
-.name-poke{
+.name-poke {
     z-index: 4;
 }
+
 .img-poke {
-z-index: 5;
+    z-index: 5;
 }
 
-.container .card:hover .face.face1{
+.container .card:hover .face.face1 {
     transform: translateY(0);
     border-radius: 10px 10px 0 0;
-    
-    
-}
-.container .card:hover .face.face1 .face1-img{
-    display: block;
-    opacity: .5;
-    
-    
+
+
 }
 
-.container .card .face.face1 .content{
+.container .card:hover .face.face1 .face1-img {
+    display: block;
+    opacity: .5;
+
+
+}
+
+.container .card .face.face1 .content {
     /* opacity: 0.4; */
     transition: 0.5s;
     display: flex;
@@ -171,13 +190,12 @@ z-index: 5;
 }
 
 
-
-.container .card .face.face1 .content img{
+.container .card .face.face1 .content img {
     max-width: 100px;
     margin-right: 20px;
 }
 
-.container .card .face.face1 .content h3{
+.container .card .face.face1 .content h3 {
     margin: 10px 0 0;
     padding: 0;
     color: #fff;
@@ -185,7 +203,7 @@ z-index: 5;
     font-size: 1.5em;
 }
 
-.container .card .face.face2{
+.container .card .face.face2 {
     position: relative;
     background: #fff;
     display: flex;
@@ -198,148 +216,392 @@ z-index: 5;
     border-radius: 20px;
 }
 
-.container .card:hover .face.face2{
+.container .card:hover .face.face2 {
     transform: translateY(0);
-    border-radius:  0 0 10px 10px;
+    border-radius: 0 0 10px 10px;
 }
 
 .container .card .face.face2 .content p {
     margin: 0;
     padding: 0;
 }
+
 /* color face1 */
 .card .face.face1.type-fire {
     background-color: rgb(236, 80, 7);
 }
- .card .face.face1.type-electric {
+
+.card .face.face1.type-electric {
     background-color: rgb(255, 165, 0);
 }
+
 .card .face.face1.type-bug {
     background-color: rgb(8, 180, 22);
 }
+
 .card .face.face1.type-water {
     background-color: rgb(8, 119, 223);
-     
+
 }
-.card .face.face1.type-ghost{
+
+.card .face.face1.type-ghost {
     background-color: rgb(43, 29, 40);
 }
+
 .card .face.face1.type-grass {
     background-color: rgb(5, 104, 13);
 }
+
 .card .face.face1.type-normal {
     background-color: rgb(45, 48, 47);
 }
+
 .card .face.face1.type-poison {
     background-color: rgb(107, 31, 143);
 }
 
-.card .face.face1.type-ground{
-    background-color: rgb(56,29,15);
+.card .face.face1.type-ground {
+    background-color: rgb(56, 29, 15);
 }
-.card .face.face1.type-fairy{
+
+.card .face.face1.type-fairy {
     background-color: rgb(202, 15, 171);
 }
-.card .face.face1.type-fighting{
-    background-color: rgba(202, 158, 15,1);
+
+.card .face.face1.type-fighting {
+    background-color: rgba(202, 158, 15, 1);
 
 }
-.card .face.face1.type-psychic{
+
+.card .face.face1.type-psychic {
     background-color: rgb(169, 180, 5);
 }
-.card .face.face1.type-dragon{
+
+.card .face.face1.type-dragon {
     background-color: rgb(236, 7, 7);
 }
-.card .face.face1.type-ice{
+
+.card .face.face1.type-ice {
     background-color: rgb(4, 102, 214);
 }
 
-.card .face.face1.type-steel{
+.card .face.face1.type-steel {
     background-color: rgb(100, 119, 139);
 }
-.card .face.face1.type-rock{
+
+.card .face.face1.type-rock {
     background-color: rgb(65, 76, 88);
 }
-.card .face.face1.type-dark{
+
+.card .face.face1.type-dark {
     background-color: rgb(0, 0, 0);
 }
-.card .face.face1.type-flying{
+
+.card .face.face1.type-flying {
     background-color: rgb(101, 139, 209);
 }
+
 /* end color face1 */
 
 /* color face2 */
 .card .face.face2.type-fire {
-    background-color: rgba(236, 80, 7,.5);
-    color: white;
-}
- .card .face.face2.type-electric {
-    background-color: rgba(255, 165, 0,.5);
-    color: white;
-}
-.card .face.face2.type-bug {
-    background-color: rgba(8, 180, 22,.5);
-    color: white;
-}
-.card .face.face2.type-water {
-    background-color: rgba(8, 119, 223,.5);
-    color: white;
-}
-.card .face.face2.type-ghost{
-    background-color: rgba(43, 29, 40,.5);
-    color: white;
-}
-.card .face.face2.type-grass {
-    background-color: rgba(5, 104, 13,.5);
-    color: white;
-}
-.card .face.face2.type-normal {
-    background-color: rgba(45, 48, 47,.5);
-    color: white;
-}
-.card .face.face2.type-poison {
-    background-color: rgba(107, 31, 143,.5);
-    color: white;
-}
-.card .face.face2.type-ground{
-    background-color: rgba(56, 29, 15,.5);
-    color: white;
-}
-.card .face.face2.type-fairy{
-    background-color: rgba(202, 15, 171,.5);
-    color: white;
-}
-.card .face.face2.type-fighting{
-    background-color: rgba(202, 158, 15,1);
-    color: white;
-}
-.card .face.face2.type-psychic{
-    background-color: rgba(169, 180, 5,.5);
-    color: white;
-}
-.card .face.face2.type-dragon{
-    background-color: rgba(236, 7, 7,.5);
-    color: white;
-}
-.card .face.face2.type-ice{
-    background-color: rgba(4, 102, 214,.5);
+    background-color: rgba(236, 80, 7, .5);
     color: white;
 }
 
-.card .face.face2.type-steel{
-    background-color: rgba(100, 119, 139,.5);
+.card .face.face2.type-electric {
+    background-color: rgba(255, 165, 0, .5);
     color: white;
 }
-.card .face.face2.type-rock{
-    background-color: rgba(65, 76, 88,.5);
+
+.card .face.face2.type-bug {
+    background-color: rgba(8, 180, 22, .5);
     color: white;
 }
-.card .face.face2.type-dark{
-    background-color: rgba(0, 0, 0,.5);
+
+.card .face.face2.type-water {
+    background-color: rgba(8, 119, 223, .5);
     color: white;
 }
-.card .face.face2.type-flying{
-    background-color: rgba(101, 139, 209,.5);
+
+.card .face.face2.type-ghost {
+    background-color: rgba(43, 29, 40, .5);
     color: white;
 }
+
+.card .face.face2.type-grass {
+    background-color: rgba(5, 104, 13, .5);
+    color: white;
+}
+
+.card .face.face2.type-normal {
+    background-color: rgba(45, 48, 47, .5);
+    color: white;
+}
+
+.card .face.face2.type-poison {
+    background-color: rgba(107, 31, 143, .5);
+    color: white;
+}
+
+.card .face.face2.type-ground {
+    background-color: rgba(56, 29, 15, .5);
+    color: white;
+}
+
+.card .face.face2.type-fairy {
+    background-color: rgba(202, 15, 171, .5);
+    color: white;
+}
+
+.card .face.face2.type-fighting {
+    background-color: rgba(202, 158, 15, 1);
+    color: white;
+}
+
+.card .face.face2.type-psychic {
+    background-color: rgba(169, 180, 5, .5);
+    color: white;
+}
+
+.card .face.face2.type-dragon {
+    background-color: rgba(236, 7, 7, .5);
+    color: white;
+}
+
+.card .face.face2.type-ice {
+    background-color: rgba(4, 102, 214, .5);
+    color: white;
+}
+
+.card .face.face2.type-steel {
+    background-color: rgba(100, 119, 139, .5);
+    color: white;
+}
+
+.card .face.face2.type-rock {
+    background-color: rgba(65, 76, 88, .5);
+    color: white;
+}
+
+.card .face.face2.type-dark {
+    background-color: rgba(0, 0, 0, .5);
+    color: white;
+}
+
+.card .face.face2.type-flying {
+    background-color: rgba(101, 139, 209, .5);
+    color: white;
+}
+
 /* end color face */
+
+
+/*Here Run Styles began*/
+
+html {
+    position: relative;
+    /*min-height: 100%;/*/
+}
+
+header {
+    text-align: center;
+    color: white;
+    background-color: #ee1515;
+    width: 100%;
+    z-index: 1;
+    box-shadow: -15px 0 15px 15px rgba(0, 0, 0, 0.5);
+    padding-top: 4px;
+    padding-bottom: 4px;
+}
+
+header h1 {
+    margin: 0;
+    padding: 0;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #ee1515;
+    text-align: center;
+    padding: 10px;
+    color: black;
+    box-shadow: -10px 0 10px 10px rgba(0, 0, 0, 0.5);
+}
+
+footer p {
+    margin: 0;
+    padding: 0;
+    color: white;
+
+}
+
+footer a {
+    /*color: white;*/
+    font-weight: bold;
+}
+
+.random-pokemon {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    width: 50%;
+    margin: 50px auto 25px;
+    background-color: #0084ff;
+    border-radius: 10px;
+    padding: 20px;
+    color: white;
+    font-size: 1rem;
+}
+
+.random-pokemon img {
+    margin-top: 6px;
+}
+
+.random-pokemon img:hover {
+    cursor: pointer;
+}
+
+.move {
+    animation: move linear 1.4s;
+}
+
+@media (max-width: 768px) {
+
+    .random-pokemon {
+        width: 95%;
+        /*margin: 50px auto 25px;*/
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    .random-pokemon {
+        width: 70%;
+        /*margin: 50px auto 25px;*/
+    }
+}
+
+@keyframes move {
+    0% {
+        transform: rotateZ(0deg);
+    }
+    17% {
+        transform: rotateZ(12deg);
+    }
+    34% {
+        transform: rotateZ(-12deg);
+    }
+    51% {
+        transform: rotateZ(12deg);
+
+    }
+    68% {
+        transform: rotateZ(-12deg);
+
+    }
+    85% {
+        transform: rotateZ(12deg);
+
+    }
+    100% {
+        transform: rotateZ(0deg)
+    }
+}
+
+.random-pokemon.type-fire {
+    background-color: rgba(236, 80, 7, .5);
+    color: white;
+}
+
+.random-pokemon.type-electric {
+    background-color: rgba(255, 165, 0, .5);
+    color: white;
+}
+
+.random-pokemon.type-bug {
+    background-color: rgba(8, 180, 22, .5);
+    color: white;
+}
+
+.random-pokemon.type-water {
+    background-color: rgba(8, 119, 223, .5);
+    color: white;
+}
+
+.random-pokemon.type-ghost {
+    background-color: rgba(43, 29, 40, .5);
+    color: white;
+}
+
+.random-pokemon.type-grass {
+    background-color: rgba(5, 104, 13, .5);
+    color: white;
+}
+
+.random-pokemon.type-normal {
+    background-color: rgba(45, 48, 47, .5);
+    color: white;
+}
+
+.random-pokemon.type-poison {
+    background-color: rgba(107, 31, 143, .5);
+    color: white;
+}
+
+.random-pokemon.type-ground {
+    background-color: rgba(56, 29, 15, .5);
+    color: white;
+}
+
+.random-pokemon.type-fairy {
+    background-color: rgba(202, 15, 171, .5);
+    color: white;
+}
+
+.random-pokemon.type-fighting {
+    background-color: rgba(202, 158, 15, 1);
+    color: white;
+}
+
+.random-pokemon.type-psychic {
+    background-color: rgba(169, 180, 5, .5);
+    color: white;
+}
+
+.random-pokemon.type-dragon {
+    background-color: rgba(236, 7, 7, .5);
+    color: white;
+}
+
+.random-pokemon.type-ice {
+    background-color: rgba(4, 102, 214, .5);
+    color: white;
+}
+
+.random-pokemon.type-steel {
+    background-color: rgba(100, 119, 139, .5);
+    color: white;
+}
+
+.random-pokemon.type-rock {
+    background-color: rgba(65, 76, 88, .5);
+    color: white;
+}
+
+.random-pokemon.type-dark {
+    background-color: rgba(0, 0, 0, .5);
+    color: white;
+}
+
+.random-pokemon.type-flying {
+    background-color: rgba(101, 139, 209, .5);
+    color: white;
+}
+
+
+
